--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@redis/client": "^5.5.6",
+    "helmet": "^8.1.0",
     "knex": "^3.1.0",
     "nestjs-knex": "^2.0.0",
     "nestjs-zod": "^4.3.1",
